syntax = "proto3";

message Empty {}

message BoolValue {
    bool value = 1;
}

message StringValue {
    string value = 1;
}

message BoxSpecification {
    int32 height = 1;
    int32 width = 2;
    int32 depth = 3;
}

message Box {
    int32 volume = 1;
}

service BoxFactory {

    rpc MakeBox(BoxSpecification) returns (Box) {}

    rpc StartProductionLine(BoxSpecification) returns (stream Box) {}

}
